Ready for first Git host

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,40 @@
 .body{
 
     background-color: rgb(241, 241, 241);
-    /* margin-top: 2% !important; */
     padding: 0px 0% 2% 0%;
-    border-radius: 10px;
+    border-radius: 10px 10px 0px 0px;  
+    overflow-x: hidden !important;
+
+}
+
+
+/* For tablets (max width 768px) */
+@media (max-width: 768px) {
+.body{
+
+  overflow-x: hidden;
+    background-color: rgb(241, 241, 241);
+    /* margin-top: 2% !important; */
+    padding: 0px 0% 0% 0%;
+    border-radius: 5px;
+    width: 100% !important;
+
+}
+
+
+}
+
+/* For mobile (max width 576px) */
+@media (max-width: 576px) {
+  .body{
+    position: absolute;
+    width: 100% !important;
+
+    /* background-color: rgb(172, 15, 15); */
+    /* margin-top: 2% !important; */
+    padding: 0px 0% 0% 0%;
+    border-radius: 5px;
+
+}
 
 }
