--- a/src/gallery/gallery.component.html
+++ b/src/gallery/gallery.component.html
@@ -1,18 +1,31 @@
-<div class="container mt-4">
-  <!-- <div class="property-header mb-4"></div> -->
+@if (property) {
+  <div class="container mt-4">
+  <div class="property-images desktop-image mb-4">
   <swiper-container class="mySwiper" space-between="40" slides-per-view="1.5" pagination="true"
     pagination-clickable="true">
-    @for (card of cards; track card.id) {
+    @for (card of property.image; track card.id) {
     <swiper-slide class="slide-img">
-      <img class="slide-img" height="500px" width="100%" [src]="card.image" />
+      <img class="slide-img" height="500px" width="100%" [src]="card" />
     </swiper-slide>
     }
   </swiper-container>
+  </div>
 
+  <div class="property-images mobile-image mb-4">
+  <swiper-container class="mySwiper" space-between="0" slides-per-view="1" pagination="true"
+    pagination-clickable="true">
+    @for (card of property.image; track card.id) {
+    <swiper-slide class="slide-img">
+      <img class="slide-img" height="500px" width="100%" [src]="card" />
+    </swiper-slide>
+    }
+  </swiper-container>
+  </div>
+<!-- @if (property) { -->
   <div class="row property-details">
     <div class="col-md-8">
-      <h2>Aruna - Type A</h2>
-      <p>Sensata Residences, Harmony Street No.12, Selhurst, London, England</p>
+      <h2>{{ property.title}}</h2>
+      <p>{{ property.description}}</p>
 
       
  <div class="container mt-4">
@@ -39,7 +52,7 @@
       <div class="col-md-4">
         <div class="feature-box">
           <div class="feature-icon"><i class="fas fa-building"></i></div>
-          <div class="feature-label">Total Floor</div>
+          <div class="feature-label">Floor</div>
           <div class="feature-value">Double floor</div>
         </div>
       </div>
@@ -49,7 +62,7 @@
         <div class="feature-box">
           <div class="feature-icon"><i class="fas fa-bed"></i></div>
           <div class="feature-label">Bedrooms</div>
-          <div class="feature-value">3 bedrooms</div>
+          <div class="feature-value">{{ property.bed}} bedrooms</div>
         </div>
       </div>
 
@@ -58,7 +71,7 @@
         <div class="feature-box">
           <div class="feature-icon"><i class="fas fa-shower"></i></div>
           <div class="feature-label">Bathrooms</div>
-          <div class="feature-value">2 bathrooms</div>
+          <div class="feature-value">{{ property.bath}} bathrooms</div>
         </div>
       </div>
 
@@ -102,20 +115,30 @@
         </tr>
         <tr>
           <td>Bedrooms</td>
-          <td>3 bedrooms</td>
+          <td>{{ property.bed}} bedrooms</td>
         </tr>
         <tr>
           <td>Bathrooms</td>
-          <td>2 bathrooms</td>
+          <td>{{ property.bath}} bathrooms</td>
         </tr>
         <tr class="table-info payNow">
-          <th colspan="2">Make Payment Now 
+          <th colspan="2">
             <!-- <button type="button" style="float: right;" class="btn right btn-secondary btn-lg">Large button</button> -->
+          </th>
+          <th colspan="2">
+           
           </th>
           
         </tr>
       </table>
-
+    <!-- <button class="btn btn-secondary  btn-lg">{{ property.prices}}</button> -->
+      <div class="d-grid gap-2">
+  <button class="btn pay-now" type="button">₦ {{ property.prices}}</button>
+  <button class="btn pay-now call-now" type="button">Call to Book </button>
+</div>
     </div>
   </div>
+
+
 </div>
+}
