--- a/src/topbanner/topbanner.component.css
+++ b/src/topbanner/topbanner.component.css
@@ -2,3 +2,15 @@
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
 }
+
+.contact-us-icon{
+     border-radius: 20px;
+     font-size: 13px;  
+     padding: 2px 5px;
+     border: solid 3px #000000;
+}
+.contact-us{
+     border-radius: 20px; 
+     font-size: 13px;  
+     padding: 5px 7px;
+}
