Updated gallery template

--- a/src/gallery/gallery.component.html
+++ b/src/gallery/gallery.component.html
@@ -34,7 +34,7 @@
       <div class="col-md-4">
         <div class="feature-box">
           <div class="feature-icon"><i class="fas fa-ruler-combined"></i></div>
-          <div class="feature-label">Land & Building Size</div>
+          <div class="feature-label">Land & Property Size</div>
           <div class="feature-value">2,000 ft²</div>
         </div>
       </div>
