--- a/src/home/home.component.html
+++ b/src/home/home.component.html
@@ -11,7 +11,7 @@
           <i class="fas fa-house"></i> Lagos > Lekki
         </button>
       </div>
-      <div class="details">Shortlet Apartments and Villa at Lekki, Lagos Island</div>
+      <div class="details">Shortlet Apartments at Ikota-Villa Estate, Lekki, Lagos Island</div>
 
       <div class="contact-tags">
 
@@ -69,7 +69,7 @@
           <i class="fas fa-dollar-sign"></i> Minimal Price
         </button>
       </div>
-      <div class="price">₦220,000</div>
+      <div class="price">₦52,000</div>
 
       <div class="present-icons text-small d-flex gap-3 align-items-center">
         <span><i class="fas fa-tv"></i> Lounge </span>
@@ -88,9 +88,6 @@
         </button>
         <button type="button" class="btn feature btn-outline-secondary">
           <i class="fas fa-check-circle"></i> Gym <i class="fas fa-dumbbell"></i>
-        </button>
-        <button type="button" class="btn feature btn-outline-secondary">
-          <i class="fas fa-check-circle"></i> Pool <i class="fas fa-swimming-pool"></i>
         </button>
         <button type="button" class="btn feature btn-outline-secondary">
           <i class="fas fa-check-circle"></i> Washing Machine <i class="fas fa-tshirt"></i>
