--- a/src/home/home.component.html
+++ b/src/home/home.component.html
@@ -159,7 +159,7 @@
         <span id="more" style="display: none;">
           erisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae
           massa. Fusce luctus vestibulum augue ut aliquet. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim
-          ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
+          ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida bebrrbr
           venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.
         </span>
       </p>
