--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,18 @@
 <nav class="navbar fixed-bottom navbar-light bg-light">
   <a class="navbar-brand" href="#">KTP Suites </a>
+  
+<div class="d-flex justify-content-center gap-4 my-3">
+  
+<a href="mailto:ktpsuites@gmail.com" class="socials"><i class="fas fa-envelope"></i> ktpsuites&#64;gmail.com </a>   <!-- Email -->
+ <a href="https://facebook.com/ktp-suites" class="socials"><i class="fab fa-facebook"></i> ktp suites </a>  <!-- Facebook -->
+<a href="https://instagram.com/ktpsuites" class="socials"><i class="fab fa-instagram"></i> ktpsuites</a>  <!-- Instagram -->
+ <a href="https://x.com/ktpsuites" class="socials"><i class="fab fa-x-twitter"></i> ktpsuites </a> <!-- X -->
+
+</div>
+
+  
+  
+      <a href="tel:+234 803 329 4037">
    <div class="contact-tags">
 
 
@@ -8,5 +21,5 @@
           <button type="button" class="btn contact-us btn-dark">Contact Us Now</button>
         </div>
 
-      </div>
+      </div></a>
 </nav>
