--- a/src/topbanner/topbanner.component.html
+++ b/src/topbanner/topbanner.component.html
@@ -15,10 +15,11 @@
         <li class="nav-item">
           <a class="nav-link" href="#properties">Properties</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Contacts</a>
-        </li>
+        <!-- <li class="nav-item">
+          <a class="nav-link disabled" href="tel:+234 803 335 3235" tabindex="-1" aria-disabled="true">Contacts</a>
+        </li> -->
       </ul>
+      <a href="tel:+234 803 335 3235">
        <div class="contact-tags">
 
 
@@ -27,7 +28,7 @@
           <button type="button" class="btn contact-us btn-dark">Contact Us Now</button>
         </div>
 
-      </div>
+      </div></a>
       <!-- <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
