--- a/src/home/home.component.html
+++ b/src/home/home.component.html
@@ -27,7 +27,7 @@
       <div class="container position-relative hide-this" style="height: 300px;">
         <div class="contact-card p-3 d-flex flex-row align-items-center gap-3" style="max-width: 300px;">
           <!-- Profile Image -->
-          <img src="../properties/assets/images/11.png" class="profile" alt="">
+          <img src="../assets/images/11.png" class="profile" alt="">
 
           <!-- Agent Info -->
           <div class="flex-grow-1">
@@ -102,10 +102,10 @@
         <div class="d-flex flex-row picture-card align-items-center" style="max-width: 200px;">
           <div class="image-stack-container">
             <div class="image-stack">
-              <img src="../properties/assets/images/11.png" class="stacked-img">
-              <img src="../properties/assets/images/11.png" class="stacked-img">
-              <img src="../properties/assets/images/11.png" class="stacked-img">
-              <img src="../properties/assets/images/11.png" class="stacked-img">
+              <img src="../assets/images/11.png" class="stacked-img">
+              <img src="../assets/images/11.png" class="stacked-img">
+              <img src="../assets/images/11.png" class="stacked-img">
+              <img src="../assets/images/11.png" class="stacked-img">
             </div>
             <div class="nav-buttons">
               <!-- <button class="nav-btn">&#8592;</button> -->
@@ -163,7 +163,7 @@
         <div class="card map-card p-3 d-flex flex-row align-items-center gap-3"
           style="max-width: 200px; height: 100px;">
           <!-- Profile Image -->
-          <img src="../properties/assets/images/11.png" class="profile" alt="">
+          <img src="../assets/images/11.png" class="profile" alt="">
 
 
           <a href="https://maps.app.goo.gl/s938xgrYkZmB1uVa8?g_st=ipc" target="_blank" style="text-decoration: none">
