--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar fixed-bottom navbar-light bg-light">
   <a class="navbar-brand" href="#">KTP Suites </a>
   
-<div class="d-flex justify-content-center gap-4 my-3">
+<div class="d-flex justify-content-center desktop gap-4 my-3">
   
 <a href="mailto:ktpsuites@gmail.com" class="socials"><i class="fas fa-envelope"></i> ktpsuites&#64;gmail.com </a>   <!-- Email -->
  <a href="https://facebook.com/ktp-suites" class="socials"><i class="fab fa-facebook"></i> ktp suites </a>  <!-- Facebook -->
@@ -9,17 +9,25 @@
  <a href="https://x.com/ktpsuites" class="socials"><i class="fab fa-x-twitter"></i> ktpsuites </a> <!-- X -->
 
 </div>
+<div class="d-flex justify-content-center mobile gap-4 my-3">
+  
+<a href="mailto:ktpsuites@gmail.com" class="socials"><i class="fas fa-envelope"></i></a>   <!-- Email -->
+ <a href="https://facebook.com/ktp-suites" class="socials"><i class="fab fa-facebook"></i></a>  <!-- Facebook -->
+<a href="https://instagram.com/ktpsuites" class="socials"><i class="fab fa-instagram"></i> </a>  <!-- Instagram -->
+ <a href="https://x.com/ktpsuites" class="socials"><i class="fab fa-x-twitter"></i></a> <!-- X -->
+
+</div>
 
   
   
-      <a href="tel:+234 803 329 4037">
+      <a class="desktop" href="tel:+234 803 329 4037">
    <div class="contact-tags">
 
 
-        <div class="btn-group mr-2" role="group" aria-label="First group">
+        <!-- <div class="btn-group mr-2" role="group" aria-label="First group">
           <button type="button" class="btn btn-light contact-us-icon"><i class="fas fa-phone"></i></button>
           <button type="button" class="btn contact-us btn-dark">Contact Us Now</button>
-        </div>
+        </div> -->
 
       </div></a>
 </nav>
