--- a/src/app/properties/properties.component.html
+++ b/src/app/properties/properties.component.html
@@ -18,11 +18,10 @@
     </ul>
     <div class="tab-content" id="terrainTabsContent">
       <div class="tab-pane fade show active" id="starting" role="tabpanel">
-        <div class="row">
+        <div class="row props">
           @for (card of properties; track card.id) {
-          <div class="col-md-6 card-list col-lg-3 mb-4">
-            <div (click)="goToDetails(card)" class="card card-list h-100 shadow-sm">
-            <div class="card card-list h-100 shadow-sm">
+          <div (click)="goToDetail(card)" class="col-md-6 card-list col-lg-3 mb-4">
+            <div (click)="goToDetail(card)" class="card card-list h-100 shadow-sm">
               <img [src]="card.image[0]" class="card-img-top" alt="{{ card.title }}">
               <div class="card-body text-center">
                 <!-- <div><p style="font-size: 7px;" class="fas fa-circle"></p><span> {{card.available == 1? 'Available': "Occupied"}}</span> <span style="float: right;" class="right"> <i class="fas far fa-heart"> </i></span></div> -->
@@ -35,7 +34,6 @@
 
               </div>
             </div>
-          </div>
           </div>
           }
         </div>
