--- a/src/topbanner/topbanner.component.html
+++ b/src/topbanner/topbanner.component.html
@@ -3,17 +3,20 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="#">KTP Suites </a>
+    <a routerLink="home" class="navbar-brand"><img width="50px" src="../favicon.ico"/> </a>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a routerLink="home" class="nav-link active" aria-current="page">Home</a>
+        </li>
+        <li routerLink="properties" class="nav-item">
+          <a routerLink="properties" class="nav-link">Properties</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#about">About</a>
+          <a routerLink="about" class="nav-link">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#properties">Properties</a>
+          <a routerLink="contact" class="nav-link">Contact</a>
         </li>
         <!-- <li class="nav-item">
           <a class="nav-link disabled" href="tel:+234 803 335 3235" tabindex="-1" aria-disabled="true">Contacts</a>
